--- a/_config.yml
+++ b/_config.yml
@@ -102,10 +102,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Louis Woo"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
+  bio              : "Major : Computer Science and Philosophy | Minor : Statistics"
+  location         : "Winnipeg, Manitoba, Canada"
   email            :
   links:
     - label: "Email"
