--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ analytics:
 # Site Author
 author:
   name             : "Louis Woo"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/bio-photo.jpg"
   bio              : "Move along !"
   location         : "Winnipeg, Manitoba, Canada"
   email            :
