--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 author:
   name             : "Louis Woo"
   avatar           : "/assets/bio-photo.jpg"
-  bio              : "Code Every Day!"
+  bio              : "Code Everyday!"
   location         : "Winnipeg, Manitoba, Canada"
   email            :
   links:
